--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "my-react-boilerplate",
+  "name": "semantic-react-app",
   "version": "1.0.0",
   "description": "`npm install` `npm start `",
   "main": "index.js",
@@ -15,14 +15,15 @@
   "license": "ISC",
   "dependencies": {
     "react": "^16.5.0",
-    "react-dom": "^16.5.0"
+    "react-dom": "^16.5.0",
+    "react-router-dom": "^4.3.1",
   },
   "devDependencies": {
     "@babel/cli": "^7.0.0",
     "@babel/core": "^7.0.1",
+    "@babel/plugin-proposal-class-properties": "^7.1.0",
     "@babel/preset-env": "^7.0.0",
     "@babel/preset-react": "^7.0.0",
-    "babel-core": "^7.0.0-bridge.0",
     "babel-jest": "^23.6.0",
     "babel-loader": "^8.0.2",
     "clean-webpack-plugin": "^0.1.19",
@@ -32,10 +33,14 @@
     "html-webpack-plugin": "^3.2.0",
     "jest": "^23.6.0",
     "node-sass": "^4.9.3",
+    "react-hot-loader": "^4.3.8",
+    "react-redux": "^5.0.7",
     "react-test-renderer": "^16.5.0",
+    "redux": "^4.0.0",
     "regenerator-runtime": "^0.12.1",
     "sass-loader": "^7.1.0",
     "style-loader": "^0.23.0",
+    "svg-inline-loader": "^0.8.0",
     "webpack": "^4.18.0",
     "webpack-cli": "^3.1.0",
     "webpack-dev-server": "^3.1.8",
